# booklib

./: .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  Makefile  README.md  main.py  manifest.json  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  sonar-project.properties  start.sh  test_sqla.py  tsconfig.json
.Jules/: palette.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml
.jules/: sentinel.md
core/: auth.py  config.py  csrf.py  email.py  limiter.py  middleware.py  security.py  templates.py
db/: crud.py  database.py  models.py
routes/: admin.py  auth.py  books.py  debug.py  errors.py  extras.py
static/: manifest.json  sw.js
static/css/: main.css  theme.css
static/js/: auth.js  books.js  filter.js  form.js  googlebs_api.js  isbn_scanner.js  main.js  popup.js  sort.js  sw.js  theme.js
static/js/components/: AddBookForm.js  BookCard.js  BookSearchResult.js  DetailModal.js  EditBookModal.js  FilterPanel.js  GoogleBooksModal.js  Navbar.js
static/js/services/: api.js
static/js/utils/: formatters.js  theme.js  useBodyScrollLock.js
static/js/views/: Home.js
static/ts/: env.d.ts  main.ts  sw.ts
static/ts/components/: AddBookForm.ts  BookCard.ts  DetailModal.ts  EditBookModal.ts  FilterPanel.ts
static/ts/utils/: formatters.ts  theme.ts
templates/: _base.html  _password_toggle.js.html  admin_users.html  auth.html  error.html  forgot_password.html  index.html  reset_password.html
templates/emails/: _base_email.html  account_verification.html  password_reset.html
utils/: file_utils.py  keepalive.py  starter.py  validators.py
(+1 files in other folders)
