[project]
name = "booklib"
version = "1.10.1"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "fastapi-csrf-protect",
    "sqlalchemy",
    'pydantic-settings',
    'python-dotenv',
    'psycopg2',
    'pwdlib[bcrypt]',
    'isbnlib',
    'python-magic',
    'requests',
    'httpx',
    'apscheduler',
    'cloudinary',
    'sib-api-v3-sdk',
    'Jinja2',
    'python-multipart',
    'starlette-securecookies',
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]

[tool.ruff]
indent-width = 4
line-length = 100
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    #"D",   # pydocstyle
    "C90", # mccabe
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

ignore = [
    "E501",
    # Temporary:
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
    "fastapi.BackgroundTasks",
]